# voicecall

lib/src/: CMakeLists.txt
lib/src/dbus/: voicecallmanagerdbusadapter.cpp
plugins/declarative/src/: voicecallprovidermodel.cpp
plugins/providers/telepathy/src/: callchannelhandler.cpp  streamchannelhandler.cpp  telepathyprovider.cpp
src/: CMakeLists.txt  audiocallpolicyproxy.cpp  basicringtonenotificationprovider.cpp
